-Changed layout completely to fit to mobile and fix overflow bugs -Menu icons changed into css instead of symbol to fit to android -contacts and email icons in header instead of chars - fontawesome icons -updated to-do

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,8 @@ body {
       circle at top left, 
       #c5b912,
       #fdfcb3
-    ); */  
+    ); */
+    overflow: hidden;
 }
 
 /********* intro page  *********/
@@ -47,20 +48,17 @@ div.intro-title p:hover {
 .main-wrapper {
   height: 100vh;
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: 44px auto 24px;
 }
 .main {  
   display: flex;
-  
+  flex-direction: row;
+  /*height: 100vh;
+  flex-grow: 1; */
 }
-.g1 {
-  width: 100%;
-  min-height: calc(100vh - 24px);
-  background: rgb(173, 180, 131);
-}
+
 
 /********** footer *********/
 .footer {
@@ -92,7 +90,7 @@ div.intro-title p:hover {
   padding: 0px;
 }
 .header-buttons-wrapper-col {
-  display: flex;
+  display: block;
   flex-direction: column;
   gap: 4px;
   padding-bottom: 3px;
@@ -117,33 +115,27 @@ div.intro-title p:hover {
     2px 2px 6px rgba(0, 0, 0, 0.6)
     ;
 }
-.header-email {
-  font-size: 30px;
-  font-weight: 600;
+.header-eml {
+  color:#000;
+  font-size: 24px !important;      
   cursor: pointer;
-  padding: 0px;
-  margin:0;
-  
 }
-.header-user {
-  padding: 0px;
-  font-size: 24px;
-  font-weight: 400;
+.header-usr {
+  color:#000;
+  font-size: 21px !important;      
   cursor: pointer;
-  padding: 0px;
-  margin:0;
+}
 
-}
 .header-hello {
   font-size: 9px;
 }
-.header-email, .header-user, .header-menu-toggle {
+.header-eml, .header-usr, .header-menu-toggle {
   display: flex;
   justify-content: center;
   align-items: center;
   align-content: center;
-  width: 36px;
-  height: 36px;
+  width: 30px;
+  height: 30px;
   text-shadow: 
     0px 0px 1px rgba(253, 243, 185, 1),
     0px 0px 2px rgba(253, 243, 185, 1),
@@ -153,7 +145,7 @@ div.intro-title p:hover {
 
 }
 
-.header-email:hover, .header-user:hover, .header-menu-toggle:hover  {
+.header-eml:hover, .header-usr:hover, .header-menu-toggle:hover  {
 
   border: 1px dotted #000;
   border-radius: 6px;
@@ -174,8 +166,7 @@ div.intro-title p:hover {
   padding: 4px;
   font-size: 18px;
   border-right: 2px solid #fff;
-  background: rgb(207, 206, 112);
-
+  background: rgb(207, 206, 112);  
 }
 .selected {
   border: 1px solid #000;
@@ -185,6 +176,7 @@ div.intro-title p:hover {
 .menu p, .menu li {
   color: rgba(253, 243, 185, 0.9);
   cursor: pointer;
+  white-space: nowrap;
   /* overflow: hidden; */
   padding: 2px 4px 2px 4px;
   margin-bottom: 3px;
@@ -198,30 +190,52 @@ div.intro-title p:hover {
 .menu p:hover, .menu li:hover {
   border: 1px dotted #000;
   border-radius: 6px;
+  
 }
 .menu ul {
-  list-style-type: "⯈";
+  list-style-type: none;
   margin-block: 6px;
 }
+.menu li {
+  margin-left: -16px;
+  
+}
 
+
+.triangle-css{
+  display: inline-block;
+  width: 0;
+	height: 0;
+  margin-left: 8px;
+	border-left: 6px solid transparent;
+	border-top: 11px solid rgba(228, 219, 167, 0.9);;
+	border-right: 6px solid transparent;
+  filter: drop-shadow(0px 0px 4px black);
+  
+}
 /********** content *********/
 .content {   
     
   padding-bottom: 12px;
   padding: 0px 12px 12px 12px;
   display: block;
+  width: 100%;
+  height: 100%;
+
 }
 .padding-top-80 {
   /* padding-top: 80px; */
 }
-
+.txt-content {
+  margin-block: 12px;
+}
 .content-title {
   font-size: 24px;
   font-weight: 300;
   letter-spacing: 2px;
   padding-bottom: 6px;
-  /* display: flex;  */ 
   padding: 12px 12px 8px 22px;
+  white-space: nowrap;
   
 }
 .content-title span {
@@ -350,9 +364,23 @@ div.intro-title p:hover {
 
 
 /********** products *********/
+
 .products {
-  /* padding: 0px 12px 0px 12px; */
+  /* padding: 0px 12px 0px 12px; */  
+  display: block;
+
   
+    
+}
+.products-content {
+  display: block;
+  margin-block: 12px;
+}
+.products-items {
+  border-top: 1px solid rgba(0, 0, 0, 1);
+  display: inline-flex;
+  flex-direction: column;
+  width: auto;
 }
 .product-item-thumb {
   display: block;
@@ -544,9 +572,8 @@ div.intro-title p:hover {
 
 /********** Login *********/
 .login {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: block;  
+  margin-top: 20px;
 }
 .login-wrapper, .signup-wrapper {
     display: inline-flex;
